--- a/resources/sass/components/custom.scss
+++ b/resources/sass/components/custom.scss
@@ -1,4 +1,23 @@
-// Overide Select2 Container
+/* Overide Select2 Class */
+.select2-container {
+    width: 410px !important;
+}
 .select2-container .select2-selection--single {
-    height: 40px !important;
+    height: 41px !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 38px !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__clear {
+    height: 38px !important;
+}
+.select2-container .select2-selection--multiple {
+    height: 41px !important;
+    min-height: 41px !important;
+}
+.select2-container .select2-search--inline .select2-search__field {
+    margin-top: 8px !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 35px !important;
 }
