--- a/resources/sass/components/custom.scss
+++ b/resources/sass/components/custom.scss
@@ -1,6 +1,6 @@
 /* Overide Select2 Class */
 .select2-container {
-    width: 410px !important;
+    width: 410px;
 }
 .select2-container .select2-selection--single {
     height: 41px !important;
