--- a/resources/sass/components/custom.scss
+++ b/resources/sass/components/custom.scss
@@ -27,9 +27,9 @@
     border: 1px solid #ced4da;
     padding: 0.65rem 1rem;
 }
-// .input-group.file-caption-main {
-//     display: none !important;
-// }
-// .kv-file-upload{
-//     display: none !important;
-// }
+.input-group.file-caption-main {
+    display: none !important;
+}
+.kv-file-upload{
+    display: none !important;
+}
