--- a/resources/sass/components/custom.scss
+++ b/resources/sass/components/custom.scss
@@ -33,3 +33,10 @@
 .kv-file-upload{
     display: none !important;
 }
+
+// Custom Button Back
+.back-btn {
+    left: 20px;
+    position: absolute;
+    top: 35px;
+}
